2014/06/09 (1.2.5)
- Using VirtualEnv for local development and testing.
- No longer installing system-wide config files (in /etc).
- Fixed broken dependencies.
- Removed manual handling of files uploaded via XMPP.
- New, faster CLI.
- Subprocess monitor names log files on child errors.
- Initialize database when running the server.
- Added missing scripts to setup.py.
- Fixed install paths in setup.py.

2013/09/30 (1.2.2)
- Fix permissions on config files during component startup.

2013/09/30 (1.2.1)
- Simpler error messages when there's no config file.
- Better autoconfiguration.
- Process monitor now prints pids.
- Kill subprocesses on ^C with SIGKILL instead of SIGTERM.
- Fixed an error in ardj print-next-track, which made ezstream
  crash instead of playing pre-packaged audio samples.
- More messages to guide through the initial setup.

2013/09/30 (1.2.0)
- When running ardj locally, use notify-send when track changes.
- Can now run a background audio player with 'ardj serve`,
  good for desktop usage.
- Can now tag tracks by artist, example:
  tag -tagme rock loud --artist="Slick Idiot"
- Can now tag tracks by file name, example:
  tag live --filename="%/KMFDM (Live)/%"
- Fixed broken tests.
- Fixed handling of / by the built-in web server.
- Fixed errors in setup.py

2013/05/23 (1.1.0)
- The new recommended way to run the server is from the source tree.
- New child process monitor that controls all necessary subprocesses,
  launched by `ardj serve'.  Default configuration files are created
  on startup.
- Files can now be manually added to the media library, then recorded
  in the database by `ardj find-new-files'.
- Removed webapi (a web layer that was previously used to query for
  the next track to play).
- Added a new subprocess for the scrobbler.
- Fixed last.fm tag scanning.
- Fixed ReplayGain scanning.
- Fixed Debian and Ubuntu init scripts.
- Updated ezstream codec parameters.
- Fixed paths in example ezstream.xml.